--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "clsx": "^1.2.1",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
-    "framer-motion": "^10.12.17",
+    "framer-motion": "^10.18.0",
     "next": "13.4.8",
     "postcss": "8.4.24",
     "react": "18.2.0",
@@ -28,6 +28,7 @@
     "react-intersection-observer": "^9.5.2",
     "react-vertical-timeline-component": "^3.6.0",
     "resend": "^0.16.0",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.5"
   },
